changes in admin and users forms

--- a/admin/upload-questions/index.html
+++ b/admin/upload-questions/index.html
@@ -201,7 +201,8 @@
       'header',
       'hidden',
       'paragraph',
-      'starRating'
+      'starRating',
+      'checkbox-group'
     ],
     disabledAttrs: ["className", "inline","toggle", "access", "name", "other", "helpetext"],
     disabledSubtypes: {
