updated the aws file upload scenario

--- a/opportunities/colorlib-wizard-13/index.html
+++ b/opportunities/colorlib-wizard-13/index.html
@@ -14,7 +14,9 @@
 
     <!-- Main css -->
     <link rel="stylesheet" href="css/style.css">
+
 </head>
+
 <body>
 
     <div class="main">
@@ -165,5 +167,8 @@
     <script src="vendor/jquery-steps/jquery.steps.min.js"></script>
     <script src="vendor/minimalist-picker/dobpicker.js"></script>
     <script src="js/main.js"></script>
+    <script>
+        document.getElementById('deii').style.display="none"
+    </script>
 </body>
 </html>
