--- a/admin/view-answers/index.html
+++ b/admin/view-answers/index.html
@@ -58,7 +58,9 @@
                         Promise.all(calls)
                             .then(async (data) => {
                                await data.map(val=>{
-                                    let _tempTR = '<tr>'+'<td>'+'<img src="https://previews.123rf.com/images/pandavector/pandavector1901/pandavector190105281/126044187-isolated-object-of-avatar-and-dummy-symbol-collection-of-avatar-and-image-stock-symbol-for-web-.jpg" alt="" />'+'</td>'+'<td>'+val.name  +'</td>'+'<td>'+val.email  +'</td>'+'<td>'+val.mobile +'</td>'+'<td>'+ val.gender+'</td>'+'</tr>'
+                                   debugger
+                                   let photo = val.photo  ? val.photo :"https://previews.123rf.com/images/pandavector/pandavector1901/pandavector190105281/126044187-isolated-object-of-avatar-and-dummy-symbol-collection-of-avatar-and-image-stock-symbol-for-web-.jpg"
+                                    let _tempTR = '<a = '+val._id+'><tr>'+'<td>'+'<img src='+photo+' alt="" />'+'</td>'+'<td>'+val.name  +'</td>'+'<td>'+val.email  +'</td>'+'<td>'+val.mobile +'</td>'+'<td>'+ val.gender+'</td>'+'</tr></a>'
                 //   _tableContents.push(_tempTR)
                   _tableContents = [..._tableContents,_tempTR]
                                 })
