--- a/opportunities/index.html
+++ b/opportunities/index.html
@@ -892,10 +892,12 @@
                 //         },
                 //         body: formData
                 //     })
-                .then(response => console.log(response.data.data.Location, 'response-profile'))
+                .then(async response => 
+                {
 
-            //   alert('sdlhjflsdkfjl')
-            let _obj = {}
+                    if(response && response.data && response.data.data && response.data.data.Location){
+//   alert('sdlhjflsdkfjl')
+let _obj = {}
             //   "email","mobile","name","photo","dob","city_state","pincode"
 
             var ele = document.getElementsByName('gender');
@@ -903,7 +905,7 @@
             for (i = 0; i < ele.length; i++) {
                 if (ele[i].checked) _obj['gender'] = ele[i].value
             }
-            _obj['photo'] = 'ele[i].value '
+            _obj['photo'] = response.data.data.Location
             await ["email", "mobile", "name", "dob", "city_state", "pincode"].map(async (val) => {
                 var _element = document.getElementById(val).value
                 if (_element && _element.length > 0) {
@@ -930,6 +932,17 @@
                     window.location.hash = 'collapseTwo'
                     // window.location.hash='collapseTwo'
                 })
+          
+                    }
+                    else{
+                        alert('error occurred')
+                    }
+        })
+        .catch(err=>{
+            console.log(err)
+        })
+
+          
 
         }
 
