--- a/admin/upload-questions/index.html
+++ b/admin/upload-questions/index.html
@@ -136,52 +136,53 @@
 
     </div>
     <div id="build-wrap"></div>
-    <div id = "buttons-form" class="new-action-buttons"><button id="show-data">Show Data</button><button id="trash">Trash all
+    <div id="buttons-form" class="new-action-buttons"><button id="show-data">Show Data</button><button id="trash">Trash
+            all
             fields</button>
         <button id="saveData">save</button>
     </div>
 
     <!-- SUCCESS/FAILURE -->
 
-    <div id = "success-failure" class="background"></div>
-<div class="container" id = "success-failure-grid">
-	<div class="row">
-		<div class="modalbox success col-sm-8 col-md-6 col-lg-5 center animate">
-			<div class="icon">
-				<span class="glyphicon glyphicon-ok"></span>
-			</div>
-			<!--/.icon-->
-			<h1>Success!</h1>
-			<p>Uploaded the questions successfully
-				<!-- <br>for verification.</p> -->
-            <button type="button" class="redo btn">View questions</button>
-            <button type="button" class="redo btn">Ok</button>
-			<span class="change">-- Click to see opposite state --</span>
-		</div>
-		<!--/.success-->
-	</div>
-	<!--/.row-->
-	<div class="row">
-		<div class="modalbox error col-sm-8 col-md-6 col-lg-5 center animate" style="display: none;">
-			<div class="icon">
-				<span class="glyphicon glyphicon-thumbs-down"></span>
-			</div>
-			<!--/.icon-->
-			<h1>Oh no!</h1>
-			<p>Oops! Something went wrong,
-				<br> you should try again.</p>
-			<button type="button" class="redo btn">Try again</button>
-			<span class="change">-- Click to see opposite state --</span>
-		</div>
-		<!--/.success-->
-	</div>
-	<!--/.row-->
-</div>
-<!--/.container-->
+    <div id="success-failure" class="background"></div>
+    <div class="container" id="success-failure-grid">
+        <div class="row">
+            <div class="modalbox success col-sm-8 col-md-6 col-lg-5 center animate">
+                <div class="icon">
+                    <span class="glyphicon glyphicon-ok"></span>
+                </div>
+                <!--/.icon-->
+                <h1>Success!</h1>
+                <p>Uploaded the questions successfully
+                    <!-- <br>for verification.</p> -->
+                    <button type="button" class="redo btn">View questions</button>
+                    <button type="button" class="redo btn">Ok</button>
+                    <span class="change">-- Click to see opposite state --</span>
+            </div>
+            <!--/.success-->
+        </div>
+        <!--/.row-->
+        <div class="row">
+            <div class="modalbox error col-sm-8 col-md-6 col-lg-5 center animate" style="display: none;">
+                <div class="icon">
+                    <span class="glyphicon glyphicon-thumbs-down"></span>
+                </div>
+                <!--/.icon-->
+                <h1>Oh no!</h1>
+                <p>Oops! Something went wrong,
+                    <br> you should try again.</p>
+                <button type="button" class="redo btn">Try again</button>
+                <span class="change">-- Click to see opposite state --</span>
+            </div>
+            <!--/.success-->
+        </div>
+        <!--/.row-->
+    </div>
+    <!--/.container-->
 
     <!--  -->
 
-   
+
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
@@ -195,22 +196,22 @@
                 fbOptions = {
                     showActionButtons: false,
                     disableFields: [
-      'autocomplete',
-      'paragraph',
-      'button',
-      'header',
-      'hidden',
-      'paragraph',
-      'starRating',
-      'checkbox-group'
-    ],
-    disabledAttrs: ["className", "inline","toggle", "access", "name", "other", "helpetext"],
-    disabledSubtypes: {
-    textarea: ['tinymce', 'quill'],
-    text:['color', 'password'],
-    // fileUpload:['File Uploader']
-  },
-    editOnAdd: true
+                        'autocomplete',
+                        'paragraph',
+                        'button',
+                        'header',
+                        'hidden',
+                        'paragraph',
+                        'starRating',
+                        'checkbox-group'
+                    ],
+                    disabledAttrs: ["className", "inline", "toggle", "access", "name", "other", "helpetext"],
+                    disabledSubtypes: {
+                        textarea: ['tinymce', 'quill'],
+                        text: ['color', 'password'],
+                        // fileUpload:['File Uploader']
+                    },
+                    editOnAdd: true
                 },
                 formBuilder = $(fbEditor).formBuilder(fbOptions);
 
@@ -225,26 +226,26 @@
                 const result = formBuilder.actions.save();
                 let _localStorage = JSON.parse(localStorage.getItem('category'))
                 let body = {
-                    category_id:_localStorage._id,
-                    questions:JSON.parse(result)
+                    category_id: _localStorage._id,
+                    questions: JSON.parse(result)
                 }
                 fetch(`${Api}api/createquestionsanswers`, {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json;charset=utf-8'
-                },
-                body: JSON.stringify(body)
-            })
-                .then(response => response.json())
-                .then(commits => {
-                    let _result = JSON.stringify(commits)
-                    console.log(_result,"__result__")
-                    document.getElementById('buttons-form').style.display = "none"
-                    document.getElementById('build-wrap').style.display = "none"
-                    document.getElementById('success-failure-grid').style.display = "block"
-                    document.getElementById('success-failure').style.display = "block"
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json;charset=utf-8'
+                    },
+                    body: JSON.stringify(body)
+                })
+                    .then(response => response.json())
+                    .then(commits => {
+                        let _result = JSON.stringify(commits)
+                        console.log(_result, "__result__")
+                        document.getElementById('buttons-form').style.display = "none"
+                        document.getElementById('build-wrap').style.display = "none"
+                        document.getElementById('success-failure-grid').style.display = "block"
+                        document.getElementById('success-failure').style.display = "block"
 
-                }); 
+                    });
                 console.log("result:", result);
             }
         });
@@ -291,7 +292,7 @@
                                         name = $(this).attr("name");
                                     var template = '<div class="' + classes + '">';
                                     template += '<span class="custom-select-trigger">' + $(this).attr("placeholder") + '</span>';
-                                    template += '<div class="custom-options">';
+                                    template += '<div class="custom-options" style="height:285px;overflow:auto">';
                                     $(this).find("option").each(function () {
                                         template += '<span class="custom-option ' + $(this).attr("class") + '" data-value="' + $(this).attr("value") + '">' + $(this).html() + '</span>';
                                     });
@@ -364,7 +365,7 @@
 
     // Redirect to questions view
 
-    const next = () =>{
+    const next = () => {
         document.getElementById('loading').style.display = "none"
         document.getElementById('containerCategory').style.display = "none"
         document.getElementById('build-wrap').style.display = "block"
@@ -412,7 +413,7 @@
                 .then(commits => {
                     let _result = JSON.stringify(commits)
                     localStorage.setItem('category', _result)
-                }); 
+                });
 
         }
 
