updated the admin page

--- a/admin/index.html
+++ b/admin/index.html
@@ -17,7 +17,7 @@
 
 <body>
 
-  <form class="form" id="login">
+  <!-- <form class="form" id="login">
     <h1 class="form__heading">Welcome</h1>
     <div class="form__group">
       <input type="email" id="email" autocomplete="false" class="form__input" placeholder="email address">
@@ -31,7 +31,33 @@
       Login
       <ion-icon class="btn__icon" name="arrow-forward-outline"></ion-icon>
     </button>
-  </form>
+  </form> -->
+
+  <div class="X">
+    <h1>Admin Important links</h1>
+    
+    <ul class="SG">
+      <li class="sgLi">
+        <div class="box">
+        <h3>Admin</h3>
+        <ul class="df">
+        <li><a href="/admin/upload-questions/"> Upload Questions</a></li>
+        <li><a href="/admin/view-answers/"> View Questions</a></li>
+        </ul> 
+      </div>
+     </li> 
+    </ul>
+    <ul class="SG">
+      <li class="sgLi">
+        <div class="box">
+        <h3>Common</h3>
+        <ul class="df">
+          <li><a href="/opportunities/"> Opportunities</a></li>
+        </ul> 
+      </div>
+     </li> 
+    </ul>
+    </div>
 
 </body>
 
