updated the home page

--- a/index.html
+++ b/index.html
@@ -225,11 +225,7 @@
                                     <div class="column large-6 tab-full">
                                         <h4>More About Us.</h4>
                                         <p>
-                                        Sed consequatur quia delectus praesentium. Ut unde velit maiores aut sint 
-                                        quia molestiae accusamus. Nihil et quidem qui natus ut et. Autem error 
-                                        architecto. Pariatur ex repellendus. Occaecati voluptatibus dolorem magni 
-                                        molestiae dolore voluptas occaecati asperiores nemo. Est fugiat fuga nesciunt 
-                                        ducimus quaerat et placeat natus.
+                                            Wrap up eventz is a Event management company based out of chennai . We did more that 300 Events in different types . We are a team of youngsters with creative mind, passion towards event management and skillful in specific field.
                                         </p>
                                     </div>
                                     <div class="column large-6 tab-full">
@@ -342,10 +338,7 @@
                         <div class="row">
                             <div class="column">
                                 <p class="lead">
-                                Voluptates laborum eum quas. Pariatur impedit sit veniam est 
-                                et quasi voluptas voluptatem. Cumque hic enim perferendis 
-                                amet odit in molestias debitis. Facere nulla qui pariatur 
-                                quasi mollitia et. Et dolorem dolorum quo in sit architecto.
+                                    Wrap up eventz is a Event management company based out of chennai . We did more that 300 Events in different types . We are a team of youngsters with creative mind, passion towards event management and skillful in specific field.
                                 </p>
 
                                 <div class="row">
