--- a/admin/upload-questions/index.html
+++ b/admin/upload-questions/index.html
@@ -157,8 +157,8 @@
                 <h1>Success!</h1>
                 <p>Uploaded the questions successfully
                     <!-- <br>for verification.</p> -->
-                    <button type="button" class="redo btn">View questions</button>
-                    <button type="button" class="redo btn">Ok</button>
+                    <button type="button" onClick='window.location.pathname="/admin"' class="redo btn">Back</button>
+                    <button type="button" class="redo btn" onClick='window.location.pathname="/"'>Ok</button>
                     <span class="change">-- Click to see opposite state --</span>
             </div>
             <!--/.success-->
