animation changes - register button

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     Coming Soon
                     </h3>
                     
-                    <h1>
+                    <h1 style="font-size: 5rem;">
                     Get ready everyone. <br>
                     We are currently <br>
                     working on a super <br>
@@ -120,8 +120,9 @@
                     <!-- end intro-content__counter-wrap -->
 
                     <div class="intro-content__notify">
-                        <button type="button" class="btn--stroke btn--small modal-trigger">
-                            Notify Me
+                        <!-- modal-trigger ---- CLASSNAME-->
+                        <button type="button" onclick="window.location.replace('/opportunities')" class="btn--stroke btn--small ">
+                            Register
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M24 12l-9-9v7h-15v4h15v7z"/></svg>
                         </button>
                     </div> <!-- end intro-content__notify -->
@@ -158,9 +159,9 @@
         <ul class="intro-social">
             <li><a href="#0"><i class="fab fa-facebook" aria-hidden="true"></i></a></li>
             <li><a href="#0"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
-            <li><a href="#0"><i class="fab fa-instagram" aria-hidden="true"></i></a></li>
-            <li><a href="#0"><i class="fab fa-dribbble" aria-hidden="true"></i></a></li>
-            <li><a href="#0"><i class="fab fa-behance" aria-hidden="true"></i></a></li>
+            <li><a href="https://www.instagram.com/_wrap_up_eventz"><i class="fab fa-instagram" aria-hidden="true"></i></a></li>
+            <!-- <li><a href="#0"><i class="fab fa-dribbble" aria-hidden="true"></i></a></li>
+            <li><a href="#0"><i class="fab fa-behance" aria-hidden="true"></i></a></li> -->
         </ul> <!-- end intro social -->
 
         <div class="intro-scroll">
