--- a/opportunities/index.html
+++ b/opportunities/index.html
@@ -25,7 +25,7 @@
 
 </head>
 
-<body onload="_funcFetchCategories()">
+<body onload="_funcFetchCategories()" id="onloadpage">
     <!-- <div id="loading" class="loadingio-spinner-blocks-qvuqcsnher"><div class="ldio-me3z71t5bx">
         <div style='left:38px;top:38px;animation-delay:0s'></div><div style='left:80px;top:38px;animation-delay:0.125s'></div><div style='left:122px;top:38px;animation-delay:0.25s'></div><div style='left:38px;top:80px;animation-delay:0.875s'></div><div style='left:122px;top:80px;animation-delay:0.375s'></div><div style='left:38px;top:122px;animation-delay:0.75s'></div><div style='left:80px;top:122px;animation-delay:0.625s'></div><div style='left:122px;top:122px;animation-delay:0.5s'></div>
         </div></div> -->
@@ -33,7 +33,8 @@
     <div class="stickyHeader">
 
         <div class="heading-form">
-            Wrap Up Eventz
+            <a href="/" style="text-decoration: none;color: white;">Wrap Up Eventz</a>
+            
         </div>
         <label class="heading-form-label">Please fill out this field</label>
     </div>
