Updated the opportunities text fields

--- a/opportunities/index.html
+++ b/opportunities/index.html
@@ -485,7 +485,7 @@
                                     if (val.field_json.type === 'date') {
                                         _temp.push('<div class="form-group">' +
                                             '<label for=' + val._id + ' class="form-label">' + val.field_json.label + '</label>' +
-                                            '<input type=' + val.field_json.type + ' name="email" id=' + val._id + ' required placeholder="E.g. john123@gmail.com"/>' +
+                                            '<input type=' + val.field_json.type + ' name="email" id=' + val._id + ' required placeholder="Enter here..."/>' +
                                             '</div>')
                                         if ((_temp.length % 2 === 0)) {
                                             _arr.push('<div class="form-row">' +
@@ -507,7 +507,7 @@
                                     else if (val.field_json.type === 'file') {
                                         _temp.push('<div class="form-group">' +
                                             '<label for=' + val._id + ' class="form-label">' + val.field_json.label + '</label>' +
-                                            '<input type = ' + val.field_json.type + ' name="email" required multiple id=' + val._id + ' placeholder="E.g. john123@gmail.com" />' +
+                                            '<input type = ' + val.field_json.type + ' name="email" required multiple id=' + val._id + ' placeholder="Enter here..." />' +
                                             '</div>')
                                         if ((_temp.length % 2 === 0)) {
                                             _arr.push('<div class="form-row">' +
@@ -529,7 +529,7 @@
                                     else if (val.field_json.type === 'number') {
                                         _temp.push('<div class="form-group">' +
                                             '<label for=' + val._id + ' class="form-label">' + val.field_json.label + '</label>' +
-                                            '<input type=' + val.field_json.type + ' required name="email"  id=' + val._id + ' placeholder="E.g. john123@gmail.com" onkeypress=' + disableInputs(this) + '/>' +
+                                            '<input type=' + val.field_json.type + ' required name="email"  id=' + val._id + ' placeholder="Enter here..." onkeypress=' + disableInputs(this) + '/>' +
                                             '</div>')
                                         if ((_temp.length % 2 === 0)) {
                                             _arr.push('<div class="form-row">' +
@@ -632,7 +632,7 @@
                                     else if (val.field_json.type === 'text') {
                                         _temp.push('<div class="form-group">' +
                                             '<label for=' + val._id + ' class="form-label">' + val.field_json.label + '</label>' +
-                                            '<input type=' + val.field_json.type + ' required name="email" id=' + val._id + ' placeholder="E.g. john123@gmail.com" />' +
+                                            '<input type=' + val.field_json.type + ' required name="email" id=' + val._id + ' placeholder="E.g. wrapup@gmail.com" />' +
                                             '</div>')
                                         if ((_temp.length % 2 === 0)) {
                                             _arr.push('<div class="form-row">' +
