updated the home page

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <path
                     d="M0 12l11 3.1 7-8.1-8.156 5.672-4.312-1.202 15.362-7.68-3.974 14.57-3.75-3.339-2.17 2.925v-.769l-2-.56v7.383l4.473-6.031 4.527 4.031 6-22z" />
                 </svg>
-            <a href="mailto:#0">wrapupeventz@gmail.com</a>
+            <a href="mailto:wrapupeventz@gmail.com">wrapupeventz@gmail.com</a>
         </div>
 
     </header> <!-- end s-header -->
@@ -132,7 +132,7 @@
                     <div class="intro-content__notify">
                         <!-- modal-trigger ---- CLASSNAME-->
                         <button type="button" onclick="window.location.replace('/opportunities')"
-                            class="btn--stroke btn--small ">
+                            class="btn--stroke btn--small modal-trigger ">
                             Register
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
                                 <path d="M24 12l-9-9v7h-15v4h15v7z" /></svg>
@@ -173,7 +173,7 @@
         </div> <!-- end modal -->
 
         <ul class="intro-social">
-            <li><a href="#0"><i class="fab fa-facebook" aria-hidden="true"></i></a></li>
+            <li><a href="https://www.facebook.com/Wrap-Up-Eventz-1408692442530496/"><i class="fab fa-facebook" aria-hidden="true"></i></a></li>
             <li><a href="#0"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
             <li><a href="https://www.instagram.com/_wrap_up_eventz"><i class="fab fa-instagram"
                         aria-hidden="true"></i></a></li>
@@ -243,7 +243,7 @@
                                 </p>
 
                                 <div class="row">
-                                    <div class="column large-6 tab-full">
+                                    <!-- <div class="column large-6 tab-full">
                                         <h4>More About Us.</h4>
                                         <p>
                                             Wrap up eventz is a Event management company based out of chennai . We did
@@ -251,7 +251,7 @@
                                             creative mind, passion towards event management and skillful in specific
                                             field.
                                         </p>
-                                    </div>
+                                    </div> -->
                                     <div class="column large-6 tab-full">
                                         <h4>Need help in your event?</h4>
                                         <p>
@@ -381,9 +381,11 @@
                                         <h4>Where to Find Us</h4>
 
                                         <p>
-                                            1600 Amphitheatre Parkway<br>
+                                            Ramapuram<br/> 
+                                             Chennai, Tamil Nadu 600089
+                                            <!-- 1600 Amphitheatre Parkway<br>
                                             Mountain View, CA<br>
-                                            94043 US
+                                            94043 US -->
                                         </p>
 
                                     </div>
@@ -392,19 +394,19 @@
                                         <h4>Follow Us</h4>
 
                                         <ul class="link-list">
-                                            <li><a href="#0">Facebook</a></li>
+                                            <li><a href="https://www.facebook.com/Wrap-Up-Eventz-1408692442530496/">Facebook</a></li>
                                             <li><a href="#0">Twitter</a></li>
-                                            <li><a href="#0">Instagram</a></li>
+                                            <li><a href="https://www.instagram.com/_wrap_up_eventz">Instagram</a></li>
                                         </ul>
 
                                     </div>
                                 </div>
 
                                 <p class="tab-content__item-bottom">
-                                    <a href="mailto:#0" class="contact-email">wrapupeventz@gmail.com</a>
+                                    <a href="mailto:wrapupeventz@gmail.com" class="contact-email">wrapupeventz@gmail.com</a>
                                     <span class="contact-number">
-                                        <a href="tel:197-543-2345">+197 543 2345</a>
-                                        <a href="tel:123-456-9000">+123 456 9000</a>
+                                        <!-- <a href="tel:197-543-2345">+197 543 2345</a> -->
+                                        <a href="tel:7418699369">+91 7418699369</a>
                                     </span>
                                 </p>
 
