--- a/opportunities/index.html
+++ b/opportunities/index.html
@@ -8,15 +8,15 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Join With Us</title>
 
-        <!-- OG TAG -->
-        <meta property="og:title" content="Join with Us" />
-        <meta property="og:type" content="site" />
-        <meta property="og:url" content="https://wrapupeventz.com/" />
-        <meta property="og:image"
-            content="https://instagram.fmaa11-1.fna.fbcdn.net/v/t51.2885-19/s320x320/81823127_179744453093149_37583862942924800_n.jpg?_nc_ht=instagram.fmaa11-1.fna.fbcdn.net&_nc_ohc=sVr39BYJagYAX_QSHme&oh=e0c66c3a84f3bf61c83b8dc4ac22a339&oe=5F661B98" />
-        <meta name="description" content="Wrap up eventz is a Event management company based out of chennai.">
-        <meta name="author" content="wrapupeventz">
-    
+    <!-- OG TAG -->
+    <meta property="og:title" content="Join with Us" />
+    <meta property="og:type" content="site" />
+    <meta property="og:url" content="https://wrapupeventz.com/" />
+    <meta property="og:image"
+        content="https://instagram.fmaa11-1.fna.fbcdn.net/v/t51.2885-19/s320x320/81823127_179744453093149_37583862942924800_n.jpg?_nc_ht=instagram.fmaa11-1.fna.fbcdn.net&_nc_ohc=sVr39BYJagYAX_QSHme&oh=e0c66c3a84f3bf61c83b8dc4ac22a339&oe=5F661B98" />
+    <meta name="description" content="Wrap up eventz is a Event management company based out of chennai.">
+    <meta name="author" content="wrapupeventz">
+
 
     <!-- Font Icon -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -451,14 +451,14 @@
         }
 
         // SUBMIT CATEGORIES
-        const handleChecked = (i) =>{
-                                    if(i===0){
-                                        return 'checked'
-                                    }
-                                    else{
-                                        return null
-                                    }
-                                }
+        const handleChecked = (i) => {
+            if (i === 0) {
+                return 'checked'
+            }
+            else {
+                return `id_sec=${i}`
+            }
+        }
 
         let ids = []
         // TO FETCH QUESTIONS
@@ -483,7 +483,7 @@
                         })
                         Promise.all(calls)
                             .then(async (data) => {
-                                
+
                                 await data.map((val, i) => {
                                     let obj = {}
                                     debugger
@@ -564,8 +564,8 @@
                                             '<div class="form-flex">' +
                                             val.field_json.values.map((subOptions, i) => {
                                                 debugger
-                                                return '<input type=radio ' + handleChecked(i) + ' name=' + val._id + ' value=' + subOptions.value + ' id=' + subOptions.value + ' />' +
-                                                    '<label for=' + subOptions.value + ' style="width:80%;margin:5px">' + subOptions.label + '</label>'
+                                                return '<input type=radio   '+ handleChecked(i)  + ' name=' + val._id + ' value=' + subOptions.label.trim().concat(val._id) + ' id=' + subOptions.label.trim().concat(val._id) + ' />' +
+                                                    '<label for=' + subOptions.label.trim().concat(val._id) + ' style="width:80%;margin:5px">' + subOptions.label + '</label>'
                                             }).join("")
                                             +
                                             // '<input type='+val.field_json.type+' name=' + val._id + ' value="female" id="f" />' +
@@ -936,6 +936,7 @@
             //     document.getElementById('avatar-select-error-message').style.display = 'block'
             //     return false
             // }
+            debugger
             document.getElementById('loading').style.display = 'block'
             await axios.post(
                 `${Api}api/upload`,
@@ -954,7 +955,7 @@
                 //         body: formData
                 //     })
                 .then(async response => {
-
+                    debugger
                     if (response && response.data && response.data.data && response.data.data.Location) {
                         //   alert('sdlhjflsdkfjl')
                         let _obj = {}
